# llm-abc

./: .gitignore  README.md  README.zh-TW.md  pyproject.toml  requirements.txt
apps/api/: __init__.py  main.py  requirements.txt
apps/api/services/: chat_service.py  training_service.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.jsx  page.jsx
data/tiny/: every-effort.txt
docs/: learning-experience.md  learning-experience.zh-TW.md  smoke-chat.md  smoke-chat.zh-TW.md  smoke-train.md  smoke-train.zh-TW.md  training-loop.md  training-loop.zh-TW.md  web-console.md  web-console.zh-TW.md
scripts/: smoke_chat.py  smoke_train.py
